examples/test/testpolicy2315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2315
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key5: value47
      key44: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value5
          key1: value46
      podSelector:
        matchLabels:
          key11: value29
          key30: value15
